Fix wrapping of sublabel if the window is narrow.

--- a/styles/tab-switcher.less
+++ b/styles/tab-switcher.less
@@ -36,6 +36,10 @@ ol.tab-switcher-tab-list {
     margin: 0 1em;
   }
 
+  li {
+    display: flex;
+  }
+
   li.selected {
     background: linear-gradient(to bottom, #3380db, #105db8);
     border-top: solid 1px white;
